--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -13,7 +13,7 @@ nav.navbar.navbar-default
 
       ul.nav.navbar-nav.navbar-right
         li
-          = link_to "Login", {controller: "users", action: "new"}
+          = link_to "Login", {controller: "sessions", action: "new"}
         li
           = link_to "Signup", {controller: "users", action: "new"}
 
