--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -12,20 +12,24 @@ nav.navbar.navbar-default
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
 
       ul.nav.navbar-nav.navbar-right
-        li
-          = link_to "Login", {controller: "sessions", action: "new"}
-        li
-          = link_to "Signup", {controller: "users", action: "new"}
 
-        li.dropdown
-          a.dropdown-toggle aria-expanded="false" data-toggle="dropdown" href="#" role="button" 
-            | Account
-            span.caret
-          ul.dropdown-menu role="menu"
-            li
-              = link_to "View profile", {controller: "users", action: "new"}
-            li
-              = link_to "Edit profile", {controller: "users", action: "new"}
-            li.divider
-            li
-              = link_to "Logout", {controller: "sessions", action: "new"}
+        -if @current_user
+          li
+            a.dropdown-toggle aria-expanded="false" data-toggle="dropdown" href="#" role="button"
+              | Account
+              span.caret
+            ul.dropdown-menu role="menu"
+              li
+                = link_to "View profile", :new_user
+              li
+                = link_to "Edit profile", edit_user_path(@current_user)
+              li.divider
+              li
+                = link_to "Logout", :logout, method: :delete, data: {confirm: 'êtes vous sûr de vouloir vous déconnecter ?'}
+
+        -else
+          li
+            = link_to "Login", {controller: "sessions", action: "new"}
+          li
+            = link_to "Signup", {controller: "users", action: "new"}
+
