--- a/app/views/landing/index.slim
+++ b/app/views/landing/index.slim
@@ -1,18 +1,16 @@
-h3 Admin Panel
+/h3 Admin Panel
+/
+/= link_to "Handle blocks", controller: "blocks", action: "index"
+/br
+/= link_to "Handle supports", controller: "supports", action: "index"
+/br
+/
+/
+/
+/h3 User Panel
+/
+/= link_to "Sell a new item", controller: "items", action: "new"
+/br
+/= link_to "Search for items to buy", controller: "items", action: "index"
+/br
 
-= link_to "Handle blocks", controller: "blocks", action: "index"
-br
-= link_to "Handle supports", controller: "supports", action: "index"
-br
-
-
-
-h3 User Panel
-
-= link_to "Sell a new item", controller: "items", action: "new"
-br
-= link_to "Search for items to buy", controller: "items", action: "index"
-br
-
-p
-  = @use
