--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,7 +7,7 @@ nav.navbar.navbar-default
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      = link_to "XChangeBloX", {controller: "landing", action: "index"}, class: "navbar-brand"
+      = link_to "Annales Telecom Lille", {controller: "landing", action: "index"}, class: "navbar-brand"
 
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
 
