--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>XchangeBloX</title>
+  <title>Learn Paleography</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-
 <%= render "layouts/flash" %>
 <%= render "layouts/header" %>
-<%= render "layouts/menu" %>
 <%= yield %>
 
+Bonjour
+<%= @current_user %>
 </body>
 </html>
