form ajout element

--- a/app/views/landing/index.slim
+++ b/app/views/landing/index.slim
@@ -14,3 +14,10 @@
 /= link_to "Search for items to buy", controller: "items", action: "index"
 /br
 
+h3 Ajouter Archive
+
+= link_to "Nouveau document", new_element_path
+
+h3 Consulter Archives
+
+= link_to "Liste des archives", elements_path
