--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -20,7 +20,7 @@ nav.navbar.navbar-default
               span.caret
             ul.dropdown-menu role="menu"
               li
-                = link_to "View profile", :new_user
+                = link_to "View profile", user_path(@current_user)
               li
                 = link_to "Edit profile", edit_user_path(@current_user)
               li.divider
