--- a/app/views/elements/_form.html.slim
+++ b/app/views/elements/_form.html.slim
@@ -8,14 +8,14 @@
 
   .field
     = f.label :type_element
-    = f.select :type_element, options_for_select(@type)
+    = f.select :type_element, options_for_select(Element::ELEMENT_LIST)
   .field
     = f.label :module
-    = f.select :module, options_for_select(@module)
+    = f.select :module, options_for_select(Element::MODULE_LIST)
   .field
     = f.label :promotion
-    = f.select :promotion, options_for_select(@promo)
+    = f.select :promotion, options_for_select(Element::PROMO_LIST)
   .field
-    = f.label :user_id
-    = f.text_field :user_id
+    = f.file_field(:chemin_element, :multiple => true)
+
   .actions = f.submit
