--- a/app/views/elements/show.html.slim
+++ b/app/views/elements/show.html.slim
@@ -10,11 +10,9 @@ p
   strong Promotion:
   = @element.promotion
 p
-  strong Chemin element:
-  = @element.chemin_element
-p
-  strong User:
-  = @element.user_id
+  strong Nom:
+  = @element.name
+
 
 = link_to 'Edit', edit_element_path(@element)
 '|
