--- a/app/views/elements/index.html.slim
+++ b/app/views/elements/index.html.slim
@@ -3,7 +3,7 @@ h1 Listing elements
 table
   thead
     tr
-      th Type element
+      th Type de Document
       th Module
       th Promotion
       th
