structuration et liens des modules et promos

--- a/app/views/elements/index.html.slim
+++ b/app/views/elements/index.html.slim
@@ -1,4 +1,4 @@
-h1 Listing elements
+h1 Liste des Documents
 
 table
   thead
@@ -22,4 +22,4 @@ table
 
 br
 
-= link_to 'New Element', new_element_path
+= link_to 'Nouveau document', new_element_path
