--- a/app/views/landing/index.slim
+++ b/app/views/landing/index.slim
@@ -5,4 +5,5 @@ h3 Ajouter Archive
 
 h3 Consulter Archives
 
-= link_to "Liste des archives", elements_path
+= link_to "Liste des archives", choose_path
+br
